<resources>
    <string name="app_name">Calora</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="login">Login</string>
    <string name="new_user_create_account">New user ? Create account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_meal">Add food item</string>
    <string name="menu_create_meal">Create your meal</string>
    <string name="menu_logout">Logout</string>

    <string name="email_isnt_registered">Email address is not registered</string>
    <string name="email_already_registered">Email address is already registered, login using this email</string>
    <string name="no_internet">No internet connection</string>
    <string name="account_created">Account created</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="minimum_6_chars">Minimum 6 characters</string>
    <string name="password_doesnt_match">Password does not match</string>

    <string name="error_creating_account">Error in creating account</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="error_loging_in">Error while logging in </string>
    <string name="logged_in">Logged in</string>

    <string name="home_second">Home Second</string>
    <string name="profile">Profile</string>
    <string name="age">Age</string>
    <string name="gender">Gender :</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="weight">Weight in Kg</string>
    <string name="height_in_cms">Height in cms</string>
    <string name="fitness_goal">Fitness goal:</string>
    <string name="sports">Sports</string>
    <string name="fitness">Fitness</string>
    <string name="fat_loss">Fat Loss</string>
    <string name="muscle_building">Muscle Building</string>
    <string name="diet_type">Diet type :</string>
    <string name="nutrient">Nutrient</string>
    <string name="quantity">Quantity</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="calories">Calories</string>
    <string name="calories_c">Calories :</string>

    <string name="quantity_c">Quantity :</string>
    <string name="protein_c">Protein :</string>
    <string name="carbs_c">Carbs :</string>
    <string name="fats_c">Fats :</string>
    <string name="cal_c">Cal :</string>

    <string name="cal">cal</string>
    <string name="water">Water</string>
    <string name="food_name">Food name </string>
    <string name="food_name_c">Food name :</string>
    <string name="save">Save</string>
    <string name="selected_food_items">Selected food items</string>
    <string name="add_food_item_to_list">Add food item to list</string>
    <string name="add_food_item_to_list_first">Add food item to list first</string>
    <string name="save_meal">Save Meal</string>
    <string name="meal_name">Meal name</string>
    <string name="meal_name_c">Meal name :</string>
    <string name="_0g">0g</string>
    <string name="_0_cal">0 cal</string>
    <string name="_0_ml">0 ml</string>
    <string name="_g">g</string>
    <string name="_ml">ml</string>
    <string name="_cal">cal</string>
    <string name="_2500_ml">2500ml</string>
    <string name="_0f">"%.0f"</string>
    <string name="today">Today\'s stats</string>


    <string-array name="unit_measure">
        <item>g</item>
        <item>ml</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="quantity_of_selected_food_item">Quantity of selected food item</string>
    <string name="this_month">  This Month</string>
    <string name="select_food_item_type">Select food item type</string>

    <string name="select_food_item">Select food item</string>
    <string name="select_food_time">Select food time</string>
    <string name="create_your_meal">Create a meal</string>
    <string name="added">Added</string>
    <string name="select_measure_for_this_food_item">Select unit of measure for this food item</string>
    <string name="enter_food_item">Enter food item name</string>
    <string name="enter_protein">Enter protein</string>
    <string name="enter_carbs">Enter carbs</string>
    <string name="enter_fats">Enter fat</string>
    <string name="enter_calories">Enter calories</string>
    <string name="no_data_available">No data available</string>
    <string name="non_vegetarian">Non-vegetarian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="both">Both</string>
    <string name="profile_updated">Profile updated</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_weight">Enter weight</string>
    <string name="enter_valid_weight">Enter valid weight</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_valid_height">Enter valid height</string>
    <string name="max_five_food_items">Maximum 5 food items in a meal</string>
    <string name="meal_added">Meal added</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_meal_name">Enter meal name</string>
    <string name="add_food_item_to_see_them_here">Add food item to see them here</string>
    <string name="added_a_glass_of_water">Added a glass of water</string>
    <string name="exceeded_num_of_glasses">You\'ve exceeded maximum number of glasses</string>
    <string name="decremented_a_glass">Decremented glass of water</string>
    <string name="can_not_decrement">Can\'t decrement</string>
    <string name="you_already_had_this_meal">You already had this meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="snack3">Snack 3</string>
    <string name="snack2">Snack 2</string>
    <string name="lunch">Lunch</string>
    <string name="snack1">Snack1</string>
    <string name="you_selected">You selected</string>
    <string name="how_to_use">How to use</string>
    <string name="logged_out">Logged out</string>

    <string name="step1">Step 1: Update your profile information. Amount of Protein, Carbohydrates, Fats and Calories per day will be calculated based on your profile information.</string>
    <string name="step2">Step 2: Click on the TODAY card, then select any meal time and create one or more meals under it.</string>
    <string name="step3">Step 3: Now select the meal which you have consumed.\n\nStep 4: You can also add new food items which are not present in the list and it can be accessed in Create meal module.</string>

    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="leave_a_message">Leave me a message</string>
    <string name="version">Version</string>
    <string name="app_version">App Version</string>
    <string name="_1_0">1.0</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="click_here_to_report_any_problem">Click here to report any problem</string>
    <string name="contact">Contact</string>
    <string name="view_linked_in">View Linked-in profile</string>
    <string name="linked_in_url">www.linkedin.com/in/akash-starvin/</string>
    <string name="dev_email">Akashstarvin999@gmail.com</string>
    <string name="dev_name">Akash Starvin D\'souza</string>
    <string name="dev_section">Developer Section</string>
    <string name="enter_registred_email">Enter your registered email id</string>
    <string name="reset_email_sent">Reset email has been sent</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_will_be_sent">An email will be sent to the registered email Id</string>
    <string name="email_id">Email Id</string>
    <string name="image_not_found">image not found</string>
    <string name="create_your_own_meal">Create your own meal</string>
    <string name="own_meal_steps">Step 1: Select the type of food.\n\nStep 2. Select the food item.\n\nStep 3: Enter the quantity based on food type.\n\nStep 4: Add the food item to the list (max 5 food items in a meal)\n\nStep 5: Give a name to your meal.\n\nStep 6: Save the meal.</string>
    <string name="water_intake">Water intake</string>
    <string name="water_detial">Click on the Plus button whenever you have a glass of water.\n\n250ml per glass.</string>
    <string name="img">Image</string>
    <string name="delete">Delete</string>
    <string name="delete_meal_message">Do you want to delete this meal ?</string>
    <string name="meal_deleted">Meal Deleted</string>
    <string name="delete_food_item_message">Do you want to delete this food item ?</string>
    <string name="food_item_deleted">Food item deleted</string>
    <string name="date">Date :</string>
    <string name="water_consumed">Water consumed :</string>
    <string name="view_food_items">View food items</string>
    <string name="food_items_c">Food Items :</string>
    <string name="view_report">View report</string>
    <string name="total_macro_nutrients_consumed_on">Total macro-nutrients consumed this month- </string>
</resources>
