<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/nav_add_meal"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/menu_add_meal" />
        <item
            android:id="@+id/nav_how_to_use"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/how_to_use" />

    </group>
</menu>
